# n-seq

./: Cargo.toml
FASTA_files/: info
src/: main.rs
