[package]
name = "n-seq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
colored = "2.1.0"
colorize = "0.1.0"
#polars = { version = "0.41.3", features = ["lazy", "dtype-u8", "dtype-i8"] }
rayon = "1.10.0"
